--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.5.0"
+    "svelte-routing": "^1.5.0",
+    "svelte-spa-router": "^3.1.0"
   }
 }
